Remove hello API implementation
